# sluice

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  sluice.yaml
.github/workflows/: ci.yml
scripts/: demo.sh
src/sluice/: app.py  backends.py  cli.py  config.py  engine.py  ledger.py  lf.py  obs.py  routing.py
tests/: conftest.py  fake_backend.py  test_anthropic.py  test_app.py  test_langfuse.py  test_reliability.py  test_report.py  test_routing.py  test_streaming.py
