[project]
name = "sluice"
version = "0.1.0"
description = "Cost-aware LLM gateway: policy routing, per-request cost accounting, retries/fallbacks, circuit breaking, OpenTelemetry tracing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "uvicorn>=0.30",
    "pyyaml>=6.0",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[project.optional-dependencies]
obs = ["langfuse>=3.0.0"]

[project.scripts]
sluice = "sluice.cli:main"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sluice"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
